# leves

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  iwyu_fix.sh  rebuild.sh  yess.service
debug/: .gitignore  CMakeLists.txt
protos/: compile.sh  yess.proto
src/: ActionHandler.cpp  ActionHandler.hpp  EchoServer.cpp  Logger.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServiceHandler.cpp  ServiceHandler.hpp  Version.h.in  action_handler.cpp  action_handler.hpp  daemonizer.cpp  daemonizer.hpp  grpc_service.cpp  grpc_service.hpp  log.hpp  main.cpp  response.cpp  response.hpp  server.cpp  server.hpp  service_handler.cpp  service_handler.hpp  version.h.in
src/Messaging/: Serializer.cpp  Serializer.hpp
src/Persistance/Entities/: Event.cpp  Event.hpp  Stream.cpp  Stream.hpp
src/Persistance/Repositories/: StreamRepository.cpp  StreamRepository.hpp
src/cmd/: command.cpp  command.hpp  command_result.cpp  command_result.hpp  domain_commands.cpp  domain_commands.hpp  shell.cpp  shell.hpp  shell_commands.cpp  shell_commands.hpp
src/db/Entities/: Event.cpp  Event.hpp  Stream.cpp  Stream.hpp
src/db/Repositories/: SqliteStreamRepo.cpp  SqliteStreamRepo.hpp  StreamRepository.cpp  StreamRepository.hpp
src/db/entities/: entity.cpp  entity.hpp  event.cpp  event.hpp  projection.cpp  projection.hpp  stream.cpp  stream.hpp
src/db/repositories/: projection_repo.cpp  projection_repo.hpp  sqlite_projection_repo.cpp  sqlite_projection_repo.hpp  sqlite_repository.cpp  sqlite_repository.hpp  sqlite_stream_repo.cpp  sqlite_stream_repo.hpp  stream_repository.cpp  stream_repository.hpp
src/ext/: DukContext.cpp  DukContext.hpp  IContext.hpp  context.hpp  duk_context.cpp  duk_context.hpp
src/msg/: Serializer.cpp  Serializer.hpp  response.cpp  response.hpp  serializer.cpp  serializer.hpp
test/: CMakeLists.txt  TestActionHandler.cpp  TestESInterop.cpp  action_handler_test.cpp  createstream.sh  es_interop_test.cpp  main.cpp  projection.js  rpclist.sh
test/commands/: CreateStream.json  CreateStream.sh  GetAllStreams.json  GetAllStreams.sh  GetEventsByStreamId.json  GetEventsByStreamId.sh  GetEventsByStreamType.json  GetEventsByStreamType.sh  PushEvent.json  PushEvent.sh  PushEvent2.json  PushEvent2.sh
test/projections/: proj1.js  userproj.js
utils/: CMakeLists.txt  files.cpp  files.hpp
